<resources>
    <string name="app_name">Stress Detection</string>

    <!-- UI elements -->
    <string name="start">start</string>
    <string name="stop">stop</string>

    <string name="dummyDate">Mon 01.01</string>
    <string name="dummyTime">12:00 AM</string>

    <string name="on_body">(ON BODY)</string>
    <string name="off_body">(OFF BODY)</string>

    <!-- API urls -->
    <string name="server_host">http://192.168.219.170:8000/api</string>

    <string name="login">%s/api/login</string>
    <string name="register">%s/api/register</string>

    <string name="submit_bvp_data">%s/api/submit_bvp_data</string>
    <string name="submit_acc_data">%s/api/submit_acc_data</string>
</resources>